fix wraperr.css

--- a/src/css/wrapper-cell.css
+++ b/src/css/wrapper-cell.css
@@ -9,7 +9,7 @@
   }
 
   @media screen and (min-width: 1280px) {
-    .signup-container {
+    .wrapper-cell {
        padding-bottom: 75px;
     }
   }
